--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-datepicker": "4.12.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
   },
